src/objects/TestTwo__c.object
<CustomObject>
    <fields>
        <fullName>Two__c</fullName>
        <label>ForTestLookUps</label>
        <referenceTo>ForTestLookUps__c</referenceTo>
        <relationshipLabel>TestTwo</relationshipLabel>
        <relationshipName>TestTwo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>jjj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ForTestLookUps</label>
        <referenceTo>ForTestLookUps__c</referenceTo>
        <relationshipLabel>TestTwo (ForTestLookUps)</relationshipLabel>
        <relationshipName>TestTwo1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kkk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ForTestLookUps</label>
        <referenceTo>ForTestLookUps__c</referenceTo>
        <relationshipLabel>TestTwo (ForTestLookUps)</relationshipLabel>
        <relationshipName>TestTwo2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TestTwo</relationshipLabel>
        <relationshipName>TestTwo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>TestTwo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestTwo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestTwo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>